--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,47 +21,51 @@ jobs:
             publish: true
     name: Build on node-v${{ matrix.node }}-${{ matrix.platform }}-${{ matrix.arch }}
     outputs:
-      publish_build_os: ${{ steps.publish-var.outputs.build_os }}
-      publish_build_arch: ${{ steps.publish-var.outputs.build_arch }}
-      publish_build_name: ${{ steps.publish-var.outputs.build_name }}
-      publish_build_node: ${{ steps.publish-var.outputs.build_node }}
-      publish_pkg_scope: ${{ steps.publish-var.outputs.pkg_scope }}
-      publish_pkg_build_name: ${{ steps.publish-var.outputs.pkg_build_name }}
+      build: ${{ steps.meta.outputs.build }}
+      publish: ${{ steps.meta.outputs.publish }}
     steps:
       - uses: actions/checkout@v2
+      - id: meta
+        name: Build metadata
+        uses: actions/github-script@v5
+        env:
+          REPO_NAME: ${{ github.repository }}
+          MATRIX_OS: ${{ matrix.os }}
+          MATRIX_PLATFORM: ${{ matrix.platform }}
+          MATRIX_ARCH: ${{ matrix.arch }}
+          MATRIX_PUBLISH: ${{ matrix.publish }}
+          MATRIX_NODE: ${{ matrix.node }}
+        with:
+          script: |-
+            const env = process.env;
+            const result = {};
+            result.targetOs = env.MATRIX_OS;
+            result.targetNode = env.MATRIX_NODE;
+            result.targetName = "node-v" + env.MATRIX_NODE + "-" + env.MATRIX_PLATFORM + "-" + env.MATRIX_ARCH;
+            const pkg = require('./package.json');
+            const [pkgNameOwner, pkgName] = pkg.name.slice(1).split("/");
+            result.nodePkg = {};
+            result.nodePkg.owner = pkgNameOwner;
+            const pkgFullName = pkgNameOwner + "-" + pkgName + "-v" + pkg.version;
+            result.nodePkg.artifactName = pkgFullName + "-" + result.targetName + ".nodepkg";
+            result.nodePkg.fileName = result.nodePkg.artifactName + ".tgz";
+            if (env.MATRIX_PUBLISH)
+            core.setOutput('publish', result);
+            return result;
       - uses: actions/setup-node@v2
       - uses: bahmutov/npm-install@v1
-      - id: build-var
-        run: |-
-          BUILD_NAME=node-v${{ matrix.node }}-${{ matrix.platform }}-${{ matrix.arch }}
-          echo "::set-output name=build_name::${BUILD_NAME}"
-          PKG_SCOPE=$(node -e "console.log(require('./package.json').name.split('/').shift().slice(1))")
-          PKG_NAME=$(node -e "console.log(require('./package.json').name.split('/').pop())")
-          PKG_VERSION=$(node -e "console.log(require('./package.json').version)")
-          echo "::set-output name=pkg_scope::${PKG_SCOPE}"
-          echo "::set-output name=pkg_name::${PKG_NAME}"
-          echo "::set-output name=pkg_version::${PKG_VERSION}"
-          echo "::set-output name=pkg_build_name::${PKG_SCOPE}-${PKG_NAME}-v${PKG_VERSION}-${BUILD_NAME}.tgz"
-      - id: publish-var
-        if: matrix.publish
-        run: |-
-          echo "::set-output name=pkg_scope::${{ steps.build-var.outputs.pkg_scope }}"
-          echo "::set-output name=pkg_build_name::${{ steps.build-var.outputs.pkg_build_name }}"
-          echo "::set-output name=build_os::${{ matrix.os }}"
-          echo "::set-output name=build_arch::${{ matrix.arch }}"
-          echo "::set-output name=build_node::${{ matrix.node }}"
-          echo "::set-output name=build_name::${{ steps.build-var.outputs.build_name }}"
-      - name: Test
+      - run: mkdir -p /tmp/artifact/nodepkg
+      - name: Test Node.js pkg
         run: npm run test --if-present
-      - name: Pack
+      - name: Pack Node.js pkg
         run: |-
           npm pack
-          mv *.tgz ${{ steps.build-var.outputs.pkg_build_name }}
-      - name: Upload
+          mv *.tgz /tmp/artifact/nodepkg/${{ fromJson(steps.meta.outputs.result).nodePkg.fileName }}
+      - name: Upload Node.js pkg
         uses: actions/upload-artifact@v2
         with:
-          name: ${{ steps.build-var.outputs.build_name }}
-          path: "*.tgz"
+          name: ${{ fromJson(steps.meta.outputs.result).nodePkg.artifactName }}
+          path: /tmp/artifact/nodepkg/*
           if-no-files-found: error
           retention-days: 7
   publish-github-release:
@@ -69,53 +73,60 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - build
-    name: Publish GitHub release
+    name: Publish release in GitHub
     steps:
-      - name: Download
-        uses: actions/download-artifact@v2
       - name: Create
         uses: softprops/action-gh-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - run: mkdir -p /tmp/artifact/nodepkg
+      - name: Download Node.js pkg
+        uses: actions/download-artifact@v2
         with:
-          files: "**/*.tgz"
-  publish-github-package:
+          path: /tmp/artifact/nodepkg
+      - name: Attach Node.js pkg
+        uses: softprops/action-gh-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          files: /tmp/artifact/nodepkg/**/*.tgz
+  publish-github-nodepkg:
     if: startsWith(github.ref, 'refs/tags/')
-    runs-on: ${{ needs.build.outputs.publish_build_os }}
+    runs-on: ${{ fromJson(needs.build.outputs.publish).targetOs }}
     needs:
       - build
-    name: Publish GitHub package
+    name: Publish Node.js pkg in GitHub
     steps:
       - name: Download
         uses: actions/download-artifact@v2
         with:
-          name: ${{ needs.build.outputs.publish_build_name }}
+          name: ${{ fromJson(needs.build.outputs.publish).nodePkg.artifactName }}
       - uses: actions/setup-node@v2
         with:
-          scope: "@${{ needs.build.outputs.publish_pkg_scope }}"
-          node-version: ${{ needs.build.outputs.publish_build_node }}
+          scope: "@${{ fromJson(needs.build.outputs.publish).nodePkg.owner }}"
+          node-version: ${{ fromJson(needs.build.outputs.publish).targetNode }}
           registry-url: https://npm.pkg.github.com
       - name: Publish
-        run: npm publish ${{ needs.build.outputs.publish_pkg_build_name }} --access public
+        run: npm publish ${{ fromJson(needs.build.outputs.publish).nodePkg.fileName }}  --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  publish-npm-package:
+  publish-npm-nodepkg:
     if: startsWith(github.ref, 'refs/tags/')
-    runs-on: ${{ needs.build.outputs.publish_build_os }}
+    runs-on: ${{ fromJson(needs.build.outputs.publish).targetOs }}
     needs:
       - build
-    name: Publish NPM package
+    name: Publish Node.js pkg in NPM
     steps:
       - name: Download
         uses: actions/download-artifact@v2
         with:
-          name: ${{ needs.build.outputs.publish_build_name }}
+          name: ${{ fromJson(needs.build.outputs.publish).nodePkg.artifactName }}
       - uses: actions/setup-node@v2
         with:
-          scope: "@${{ needs.build.outputs.publish_pkg_scope }}"
-          node-version: ${{ needs.build.outputs.publish_build_node }}
+          scope: "@${{ fromJson(needs.build.outputs.publish).nodePkg.owner }}"
+          node-version: ${{ fromJson(needs.build.outputs.publish).targetNode }}
           registry-url: https://registry.npmjs.org
       - name: Publish
-        run: npm publish ${{ needs.build.outputs.publish_pkg_build_name }} --access public
+        run: npm publish ${{ fromJson(needs.build.outputs.publish).nodePkg.fileName }}  --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
